[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/screens/RegistrationPanel.gd" type="Script" id=1]

[node name="Node" type="Node"]

[node name="RegistrationPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Name" type="LineEdit" parent="RegistrationPanel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -116.0
margin_right = 72.0
margin_bottom = -92.0
placeholder_text = "Nombre"

[node name="LastName" type="LineEdit" parent="RegistrationPanel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -82.0
margin_right = 72.0
margin_bottom = -58.0
placeholder_text = "Apellido"

[node name="Email" type="LineEdit" parent="RegistrationPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -94.0
margin_right = 72.0
margin_bottom = -70.0
placeholder_text = "Email"

[node name="Password" type="LineEdit" parent="RegistrationPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -58.0
margin_right = 72.0
margin_bottom = -34.0
secret = true
placeholder_text = "Contrase√±a"

[node name="RegisterButton" type="Button" parent="RegistrationPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -10.0
margin_right = -7.0
margin_bottom = 10.0
rect_rotation = -0.0989103
text = "Registrar"

[node name="BackButton" type="Button" parent="RegistrationPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -10.0
margin_right = 73.0
margin_bottom = 10.0
rect_rotation = -0.0989103
text = "Atras"

[node name="HTTPRegistrationRequest" type="HTTPRequest" parent="RegistrationPanel"]

[node name="EmailAlreadyInUse" type="AcceptDialog" parent="RegistrationPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = -29.0
margin_right = 121.0
margin_bottom = 29.0
dialog_text = "\"El correo electronico ya se encuentra en uso\""

[node name="InternetConnection" type="AcceptDialog" parent="RegistrationPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = -29.0
margin_right = 121.0
margin_bottom = 29.0
dialog_text = "Ha ocurrido un error inesperado, revise su conexion a internet"

[node name="InvalidFields" type="AcceptDialog" parent="RegistrationPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = -29.0
margin_right = 121.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="RegistrationPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -167.0
margin_right = 512.0
margin_bottom = -153.0
text = "Registro"
align = 1
[connection signal="pressed" from="RegistrationPanel/RegisterButton" to="RegistrationPanel" method="_on_RegisterButton_pressed"]
[connection signal="pressed" from="RegistrationPanel/BackButton" to="RegistrationPanel" method="_on_BackButton_pressed"]
[connection signal="request_completed" from="RegistrationPanel/HTTPRegistrationRequest" to="RegistrationPanel" method="onHTTPRegistrationRequestCompleted"]
